--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.0"
   },
